Added interceptor to rest template builder