@@ -1,6 +1,7 @@
 package com.example.springresttemplate.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpRequest;
 import org.springframework.http.client.ClientHttpRequestExecution;
@@ -13,24 +14,32 @@ import org.springframework.security.oauth2.client.OAuth2AuthorizeRequest;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
+import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 
 import java.io.IOException;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import static java.util.Objects.isNull;
 
-@RequiredArgsConstructor
+@Configuration
 public class OAuthClientInterceptor implements ClientHttpRequestInterceptor {
 
     private final OAuth2AuthorizedClientManager manager;
     private final Authentication principal;
     private final ClientRegistration clientRegistration;
 
+    public OAuthClientInterceptor(OAuth2AuthorizedClientManager manager, ClientRegistrationRepository clientRegistrationRepository) {
+        this.manager = manager;
+        this.principal = createPrincipal();
+        this.clientRegistration = clientRegistrationRepository.findByRegistrationId("springauth");
+    }
+
     @Override
     public ClientHttpResponse intercept(HttpRequest request, byte[] body, ClientHttpRequestExecution execution) throws IOException {
         OAuth2AuthorizeRequest oAuth2AuthorizeRequest = OAuth2AuthorizeRequest
-                .withClientRegistrationId(clientRegistration.getClientId())
+                .withClientRegistrationId(clientRegistration.getRegistrationId())
                 .principal(createPrincipal())
                 .build();
 
@@ -40,7 +49,7 @@ public class OAuthClientInterceptor implements ClientHttpRequestInterceptor {
             throw new IllegalArgumentException("Missing Credentials");
         }
 
-        request.getHeaders().add(HttpHeaders.AUTHORIZATION, "Bearer " + client.getAccessToken());
+        request.getHeaders().add(HttpHeaders.AUTHORIZATION, "Bearer " + client.getAccessToken().getTokenValue());
         return execution.execute(request, body);
     }
 
@@ -48,7 +57,7 @@ public class OAuthClientInterceptor implements ClientHttpRequestInterceptor {
         return new Authentication() {
             @Override
             public Collection<? extends GrantedAuthority> getAuthorities() {
-                return List.of();
+                return Collections.emptyList();
             }
 
             @Override
@@ -63,7 +72,7 @@ public class OAuthClientInterceptor implements ClientHttpRequestInterceptor {
 
             @Override
             public Object getPrincipal() {
-                return null;
+                return this;
             }
 
             @Override
@@ -78,7 +87,7 @@ public class OAuthClientInterceptor implements ClientHttpRequestInterceptor {
 
             @Override
             public String getName() {
-                return "";
+                return clientRegistration.getClientId();
             }
         };
     }
